# external-config-operator

./: .env  Cargo.toml  Dockerfile  test-config.yaml  test-deploy.yaml  test-lease.yaml
docs/: deploy-backend-stores-with-helm.md  developers-guide.md  index.md  installation.md  local-installation.md
docs/extractors-examples/: go.md  nodejs.md  spring-cloud-config-server.md
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  crd.yaml  deployment.yaml  serviceaccount.yaml
helm/templates/cluster-configuration-stores/: cluster-configuration-store.yaml  deployment.yaml  network-policy.yaml  service.yaml
helm/templates/configuration-stores/: configuration-store.yaml  deployment.yaml  network-policy.yaml  service.yaml
helm/templates/tests/: test-cluster-config-store-pods-accesability-from-controller.yaml  test-cluster-config-store-pods-accesability-from-outside.yaml  test-config-store-pods-accesability-from-controller.yaml  test-config-store-pods-accesability-from-outside.yaml
src/: crdgen.rs  main.rs
src/contract/: clients.rs  iconfig_source_client.rs  iconfigstore.rs  ik8s_client.rs  ireconcilable.rs  lib.rs  mod.rs
src/controller/: controller.rs  controller_data.rs  mod.rs
src/controller/config_store/: http_store.rs  mod.rs  vault_store.rs
src/controller/leader_election/: leader_election.rs  mod.rs
src/controller/utils/: config.rs  context.rs  crd.rs  file_format.rs  mod.rs  signals.rs
src/controller/utils/parsers/: json_to_key_value.rs  key_value_to_json.rs  mod.rs  text_to_json.rs
src/controller/v1alpha1/: configuration_discoverer.rs  controller.rs  controller_tests.rs  crd_client.rs  fixtures.rs  mod.rs
src/controller/v1alpha1/crd/: claim.rs  configuration_store.rs  configuration_store_workload.rs  mod.rs
src/observability/: metrics.rs  metrics_server.rs  mod.rs  telemetry.rs
test-store/: Dockerfile  go.mod  main.go
