[package]
name = "external-config-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30" }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.95.0",  features = [
    "client", "derive", "runtime"
] }
mockall = "0.13.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json","rustls-tls"] }
schemars = "0.8.21"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.34"
webpki-roots = "0.26.6"
chrono = "0.4.38"
humantime = "2.1.0"
thiserror = "1.0.64"
async-trait = "0.1.82"
base64 = "0.22.1"
toml = "0.8.19"
config = "0.14.0"
json5 = "0.4.1"
java-properties = "2.0.0"
dotenvy = "0.15.7"
env-file-reader = "0.3.0"
regex = "1.10.6"


[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[profile.release]
lto = true
codegen-units = 2
opt-level = "s"
debug = false

#panic = 'abort'
#incremental = false
#strip = true
