[package]
name = "external-config-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30" }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.95.0",  features = [
    "client", "derive", "runtime"
] }
mockall = "0.13.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json","rustls-tls"] }
schemars = "0.8.21"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_yaml = "0.9.34"
webpki-roots = "0.26.6"
chrono = "0.4.38"
humantime = "2.1.0"
thiserror = "1.0.64"
async-trait = "0.1.82"
base64 = "0.22.1"
toml = "0.8.19"
config = "0.14.0"
json5 = "0.4.1"
java-properties = "2.0.0"
dotenvy = "0.15.7"
env-file-reader = "0.3.0"
regex = "1.10.6"
convert_case = "0.6.0"
once_cell = "1.19.0"
ctor = "0.2.8"
dtor = "0.0.0"
colored = "2.1.0"
log = "0.4.22"
tokio-util = "0.7.12"
either = "1.13.0"
actix-web = "4.9.0"
prometheus-client = "0.22.3"
opentelemetry = "0.27.0"
anyhow = "1.0.93"
opentelemetry_sdk = "0.27.0"
tracing-opentelemetry = "0.28.0"


[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[profile.release]
lto = true
codegen-units = 2
opt-level = "s"
debug = false

[dev-dependencies]
paste = "1.0.15"
rstest = "0.23.0"
serial_test = "3.1.1"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.3", features = ["k3s"] }
wiremock = "0.6.2"

#panic = 'abort'
#incremental = false
#strip = true
